--- a/MXB105 Exam Notes Alternate.tex
+++ b/MXB105 Exam Notes Alternate.tex
@@ -6,7 +6,7 @@
 \usepackage{changepage} % Modify page width
 \usepackage{multicol} % Use multiple columns
 \usepackage{titlesec} % Modify section heading styles
-\usepackage{tikz} % 
+\usepackage{tikz} %
 \usetikzlibrary{quotes,angles}
 
 %% A4 page
@@ -15,7 +15,7 @@
 	margin = 10mm
 }
 
-%% Hide horizontal rule 
+%% Hide horizontal rule
 \renewcommand{\headrulewidth}{0pt}
 
 %% Hide page numbers
@@ -191,7 +191,7 @@
             \(\cos{\left( x \right)}\)  & \(\left( -1 \right)^n \frac{x^{2n}}{\left( 2n \right)!}\)     & all \(x\)                  \\
             \(\frac{1}{1-x}\)           & \(x^n\)                                                       & \(\left( -1,\: 1 \right)\) \\
             \(\frac{1}{1+x^2}\)         & \(\left( -1 \right)^n x^{2n}\)                                & \(\left( -1,\: 1 \right)\) \\
-            \(\ln{\left( 1+x \right)}\) & \(\left( -1 \right)^{n+1} \frac{x^n}{n}\)                     & \(\left( -1,\: 1 \right]\) \\ % chktex 9
+            \(\ln{\left( 1+x \right)}\) & \(\left( -1 \right)^{n+1} \frac{x^n}{n}\)                     & \(\left( -1,\: 1 \right]\) \\
             \bottomrule
         \end{tabular}
     \end{table}
@@ -446,4 +446,4 @@
         L & : \text{inductance} & v(t) & : \text{voltage supply}
     \end{align*}
 \end{multicols}
-\end{document} % chktex 17
+\end{document}
