--- a/MXB105 Exam Notes.tex
+++ b/MXB105 Exam Notes.tex
@@ -134,7 +134,7 @@
     \end{equation*}
     \section*{Fundamental Theorem of Calculus}
     \begin{align*}
-        \int_a^b \odv{F\left( x \right)}{x} \odif{x} & = F\left( b \right) - F\left( a \right) \\
+        \int_a^b \odv{F\left( x \right)}{x} \odif{x}                 & = F\left( b \right) - F\left( a \right) \\
         \odv*{\left( \int_a^x f\left( t \right) \odif{t} \right)}{x} & = f\left( x \right)
     \end{align*}
     \section*{Taylor Polynomials}
@@ -158,7 +158,7 @@
             \(\cos{\left( x \right)}\)  & \(\left( -1 \right)^n \frac{x^{2n}}{\left( 2n \right)!}\)     & all \(x\)                  \\
             \(\frac{1}{1-x}\)           & \(x^n\)                                                       & \(\left( -1,\: 1 \right)\) \\
             \(\frac{1}{1+x^2}\)         & \(\left( -1 \right)^n x^{2n}\)                                & \(\left( -1,\: 1 \right)\) \\
-            \(\ln{\left( 1+x \right)}\) & \(\left( -1 \right)^{n+1} \frac{x^n}{n}\)                     & \(\left( -1,\: 1 \right]\) \\ % chktex 9
+            \(\ln{\left( 1+x \right)}\) & \(\left( -1 \right)^{n+1} \frac{x^n}{n}\)                     & \(\left( -1,\: 1 \right]\) \\
             \bottomrule
         \end{tabular}
     \end{table}
@@ -415,8 +415,8 @@
         \toprule
         \(F\left( x \right)\)                                                  & \(y_P\left( x \right)\)                                                   \\
         \midrule
-        a constant                                                             & A                                                                         \\
-        a polynomial of degree \(n\)                                           & \(\sum_{i = 0}^n A_i x^i\)                                  \\
+        a constant                                                             & \(A\)                                                                     \\
+        a polynomial of degree \(n\)                                           & \(\sum_{i = 0}^n A_i x^i\)                                                \\
         \(e^{kx}\)                                                             & \(A e^{kx}\)                                                              \\
         \(\cos{\left( \omega x \right)}\) or \(\sin{\left( \omega x \right)}\) & \(A_0 \cos{\left( \omega x \right)} + A_1 \sin{\left( \omega x \right)}\) \\
         a combination of the above                                             & a combination of the above                                                \\
@@ -425,4 +425,4 @@
     \end{tabular}
 \end{table}
 \end{document}
-% chktex 17
+
