Undo changes to series form

--- a/MXB105 Lecture Notes.tex
+++ b/MXB105 Lecture Notes.tex
@@ -369,7 +369,8 @@ between infinite series (definite integrals) and antiderivatives
 \end{definition}
 \subsection{Convergence Tests}
 For any power series of the form \(\displaystyle\sum_{i=i_0}^\infty
-a_i x^i\), the following tests can be used to determine convergence.
+a_i\), the following tests can be used to determine the radius of
+convergence.
 \begin{tcolorboxlarge}[title={Alternating Series}]
     \textbf{Conditions} \(a_i = \left( -1 \right)^i b_i\) or
     \(a_i = \left( -1 \right)^{i+1} b_i\). \(b_i>0\).
