Explicitly specify unit vector

--- a/MXB105 Exam Notes.tex
+++ b/MXB105 Exam Notes.tex
@@ -204,9 +204,9 @@
     \section*{Directional Derivatives}
     \begin{align*}
         \symbf{\nabla}_{\symbf{u}}f
-         & = \symbf{\nabla}f \cdot \symbf{u}
+         & = \symbf{\nabla}f \cdot \hat{\symbf{u}}
     \end{align*}
-    where \(\symbf{u}\) is a unit vector and the slope is given by \(\norm{\symbf{\nabla}_{\symbf{u}}f}\).
+    where \(\hat{\symbf{u}}\) is a unit vector and the slope is given by \(\norm{\symbf{\nabla}_{\symbf{u}}f}\).
     If \(\symbf{\nabla}_{\symbf{u}}f=0\), \(\symbf{u}\) is tangent to the level curve at \(\symbf{x}_0\).
     \begin{align*}
         \max_{\norm{\symbf{u}} = 1} \symbf{\nabla}_{\symbf{u}}f = \symbf{\nabla}f
