--- a/MXB105 Lecture Notes.tex
+++ b/MXB105 Lecture Notes.tex
@@ -505,11 +505,11 @@ Recognising continuous functions:
 \subsection{Directional Derivatives}
 \begin{definition}
     The directional derivative \(\symbf{\nabla}_{\symbf{u}}f\) is the
-    rate at which the function \(f\) changes in the direction
-    \(\symbf{u}\).
+    rate at which the function \(f\) changes in the direction of
+    \(\hat{\symbf{u}}\).
     \begin{align*}
-        \symbf{\nabla}_{\symbf{u}}f & = \lim_{h \to 0} \frac{f\left( \symbf{x} + h\symbf{u} \right) - f\left( \symbf{x} \right)}{h} \\
-                                    & = \symbf{\nabla}f \cdot \symbf{u}
+        \symbf{\nabla}_{\symbf{u}}f & = \lim_{h \to 0} \frac{f\left( \symbf{x} + h\hat{\symbf{u}} \right) - f\left( \symbf{x} \right)}{h} \\
+                                    & = \symbf{\nabla}f \cdot \hat{\symbf{u}}
     \end{align*}
     where the slope is given by \(\norm{\symbf{\nabla}_{\symbf{u}}f}\).
 \end{definition}
